--- a/index.html
+++ b/index.html
@@ -1,11 +1,32 @@
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-<body>
-    <script src="/objects/store.js"></script>
-</body>
+    <body>
+        <table id="renderTable">
+            <tr>
+                <th>Store
+                <th>6AM
+                <th>7AM
+                <th>8AM
+                <th>9AM
+                <th>10AM
+                <th>11AM
+                <th>12PM
+                <th>1PM
+                <th>2PM
+                <th>3PM
+                <th>4PM
+                <th>5PM
+                <th>6PM
+                <th>7PM
+                <th>8PM
+                <th>Total
+            </tr>
+        <script src="/objects/store.js"></script>
+    </body>
 </html>
