--- a/index.html
+++ b/index.html
@@ -7,26 +7,33 @@
     <title>Document</title>
 </head>
     <body>
-        <table id="renderTable">
-            <tr>
-                <th>Store
-                <th>6AM
-                <th>7AM
-                <th>8AM
-                <th>9AM
-                <th>10AM
-                <th>11AM
-                <th>12PM
-                <th>1PM
-                <th>2PM
-                <th>3PM
-                <th>4PM
-                <th>5PM
-                <th>6PM
-                <th>7PM
-                <th>8PM
-                <th>Total
-            </tr>
+      
+        <div class="side"></div>
+        <div class="section">
+            <form action=""></form>
+            <table id="renderTable">
+                <tr>
+                    <th>Store
+                    <th>6AM
+                    <th>7AM
+                    <th>8AM
+                    <th>9AM
+                    <th>10AM
+                    <th>11AM
+                    <th>12PM
+                    <th>1PM
+                    <th>2PM
+                    <th>3PM
+                    <th>4PM
+                    <th>5PM
+                    <th>6PM
+                    <th>7PM
+                    <th>8PM
+                    <th>Total
+                </tr>
+            </table>
+        </div>
+        <div class="side"></div>
         <script src="/objects/store.js"></script>
     </body>
 </html>
