--- a/index.html
+++ b/index.html
@@ -10,7 +10,40 @@
       
         <div class="side"></div>
         <div class="section">
-            <form action=""></form>
+            <form id= 'form' action="">
+                Store Name:<input id='name' type="text"><br><br>
+                Minimum Cx Count:<input id= 'min' type="number"><br><br>
+                Maximum Cx Count:<input id= 'max'type="number"><br><br>
+                Avgerage Cookies:<input id='avg' type="number"><br><br>
+                <input id="sub" type="submit">
+                <input type="reset">
+              
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+            </form>
             <table id="renderTable">
                 <tr>
                     <th>Store
