--- a/index.html
+++ b/index.html
@@ -1,72 +1,30 @@
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-    <body>
-      
-        <div class="side"></div>
-        <div class="section">
-            <form id= 'form' action="">
-                Store Name:<input id='name' type="text"><br><br>
-                Minimum Cx Count:<input id= 'min' type="number"><br><br>
-                Maximum Cx Count:<input id= 'max'type="number"><br><br>
-                Avgerage Cookies:<input id='avg' type="number"><br><br>
-                <input id="sub" type="submit">
-                <input type="reset">
-              
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-            </form>
-            <table id="renderTable">
-                <tr>
-                    <th>Store
-                    <th>6AM
-                    <th>7AM
-                    <th>8AM
-                    <th>9AM
-                    <th>10AM
-                    <th>11AM
-                    <th>12PM
-                    <th>1PM
-                    <th>2PM
-                    <th>3PM
-                    <th>4PM
-                    <th>5PM
-                    <th>6PM
-                    <th>7PM
-                    <th>8PM
-                    <th>Total
-                </tr>
-            </table>
+<body>
+    <header>
+        <h1>The Jammin'<br> Salmon</h1>
+    </header>
+    <section class="about">
+        <div class="col">
+            <img src="img/frosted-cookie_burned.png" alt="">
         </div>
-        <div class="side"></div>
-        <script src="/objects/store.js"></script>
-    </body>
+        <div class="col">
+            <h2>ABOUT <br>US</h2>
+        </div>
+        <div class="cola">
+            <img src="img/frosted-cookie_burned.png" alt="">
+        </div>
+    </section>
+    <section class="about_text">
+        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+
+    </section>
+    <footer></footer>
+</body>
 </html>
